# cbio-ingest

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  alembic.ini  env.example  pyproject.toml  pytest.ini  release-please-config.json
.github/: dependabot.yml  release-drafter.yml
.github/actions/setup-project/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  pr-title-check.yml  release-drafter.yml  release-please.yml  release.yml
app/: __init__.py  auth.py  db.py  fs.py  main.py  models.py  scheduler.py  tasks.py  validator.py
app/routers/: panels.py  studies.py  validations.py
app/tests/: conftest.py  test_auth.py  test_db.py  test_fs.py  test_main.py  test_models.py  test_openapi_contract.py  test_routers_panels.py  test_routers_studies.py  test_routers_validations.py  test_scheduler.py  test_smoke.py  test_tasks.py  test_validator.py
db/migrations/: env.py
db/migrations/versions/: 2026_05_08_55f23824495c_initial_schema.py
docker/: Dockerfile  build-ghcr.sh  build.sh  docker-compose.override.yml  entrypoint.sh  env.example
migrations/versions/: 2026_05_08_55f23824495c_initial_schema.py  2026_05_22_209dc4982f7e_added_date_created_field_to_models.py  2026_06_17_4ec2e5522283_initial_migration.py
utils/: generate_token.py  install-cbioportal.sh
