[project]
name = "cbio-ingest"
version = "0.1.0"
description = "REST API for ingesting data into cBioPortal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "click>=8.3.2",
    "docker>=7.1.0",
    "fastapi[standard]>=0.136.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "rq>=2.8.0",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "schemathesis>=4.17.0",
    "openapi-spec-validator>=0.7.1",
]
